--- a/themes/mc2020/assets/scss/_content.scss
+++ b/themes/mc2020/assets/scss/_content.scss
@@ -3,13 +3,16 @@
   display: flex;
   margin-top: 1.6rem;
   margin-bottom: 3.2rem;
+
   header {
     margin-top: 6.4rem;
     margin-bottom: 3.2rem;
+
     h1 {
       font-size: 4.2rem;
       line-height: 4.6rem;
       margin: 0;
+
       @media only screen and (max-width : 768px) {
         font-size: 4.0rem;
         line-height: 4.4rem;
@@ -20,18 +23,22 @@
   article {
     footer {
       margin-top: 4.0rem;
+
       .see-also {
         margin: 3.2rem 0;
+
         h3 {
           margin: 3.2rem 0;
         }
       }
     }
   }
+
   .post {
     .post-title {
       margin-bottom: .75em;
     }
+
     .post-meta {
       i {
         text-align: center;
@@ -39,6 +46,7 @@
         margin-left: 0;
         margin-right: 0.5rem;
       }
+
       .date {
         .posted-on {
           margin-left: 0;
@@ -47,10 +55,12 @@
       }
     }
   }
+
   figure {
     margin: 0;
     padding: 0;
   }
+
   figcaption p {
     text-align: center;
     font-style: italic;
@@ -59,10 +69,11 @@
   }
 }
 
-.avatar img{
+.avatar img {
   width: 20rem;
   height: auto;
   border-radius: 50%;
+
   @media only screen and (max-width : 768px) {
     width: 10rem;
   }
@@ -73,26 +84,32 @@
     margin: 3.2rem 0 3.2rem 0;
     list-style: none;
     padding: 0;
+
     li {
       font-size: 1.8rem;
+
       @media only screen and (max-width : 768px) {
         margin: 1.6rem 0 1.6rem 0;
       }
+
       .date {
         display: inline-block;
         width: 20.0rem;
         text-align: right;
         margin-right: 3.0rem;
+
         @media only screen and (max-width : 768px) {
           display: block;
           text-align: left;
         }
       }
+
       .title {
         font-size: 1.8rem;
         color: $fg-color;
         font-family: $heading-font-family;
         font-weight: 700;
+
         &:hover,
         &:focus {
           color: $link-color
@@ -106,40 +123,50 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   .about {
     text-align: center;
+
     h1 {
       margin-top: 2.0rem;
       margin-bottom: 0.5rem;
     }
+
     h2 {
       margin-top: 1.0rem;
       margin-bottom: 0.5rem;
       font-size: 2.4rem;
+
       @media only screen and (max-width : 768px) {
         font-size: 2.0rem;
       }
     }
+
     ul {
       list-style: none;
       margin: 3.0rem 0 1.0rem 0;
       padding: 0;
+
       li {
         display: inline-block;
         position: relative;
+
         a {
           color: $fg-color;
           text-transform: uppercase;
           margin-left: 1.0rem;
           margin-right: 1.0rem;
           font-size: 1.6rem;
+
           &:hover,
           &:focus {
             color: $link-color;
           }
+
           @media only screen and (max-width : 768px) {
             font-size: 1.4rem;
           }
+
           i {
             font-size: 3.2rem;
           }
@@ -155,9 +182,9 @@
     margin: 4rem auto;
     padding: 3.2rem;
     border-radius: 1.2rem;
-    background: #f9fafb;
-    border: 1px solid #e3e8f0;
-    box-shadow: 0 10px 26px rgba(15, 23, 42, 0.06);
+    // background: #f9fafb;
+    // border: 1px solid #e3e8f0;
+    // box-shadow: 0 10px 26px rgba(15, 23, 42, 0.06);
 
     .eyebrow {
       display: inline-block;
@@ -175,6 +202,7 @@
       margin-top: 1.8rem;
       margin-bottom: 1.2rem;
       font-size: 4.0rem;
+
       @media only screen and (max-width : 768px) {
         font-size: 3.2rem;
       }
@@ -206,20 +234,24 @@
       transition: all 0.15s ease-in-out;
       text-decoration: none;
       font-size: 1.5rem;
+
       &.primary {
         background: $link-color;
         color: #fff;
         box-shadow: 0 8px 18px rgba(21, 101, 192, 0.22);
+
         &:hover,
         &:focus {
           background: darken($link-color, 6%);
           box-shadow: 0 10px 20px rgba(21, 101, 192, 0.24);
         }
       }
+
       &.ghost {
         background: #fff;
         border-color: #d6dce5;
         color: $fg-color;
+
         &:hover,
         &:focus {
           border-color: $link-color;
@@ -256,32 +288,39 @@
       list-style: none;
       padding: 0;
       margin: 0;
+
       li {
         display: flex;
         align-items: center;
         gap: 0.8rem;
         margin-bottom: 1.2rem;
+
         &:last-child {
           margin-bottom: 0;
         }
+
         .date {
           font-size: 1.3rem;
           color: #6c7b92;
           min-width: 11rem;
+
           @media only screen and (max-width : 768px) {
             min-width: auto;
           }
         }
+
         .title {
           font-size: 1.55rem;
           color: $fg-color;
           font-weight: 700;
           text-decoration: none;
+
           &:hover,
           &:focus {
             color: $link-color;
           }
         }
+
         .badge {
           display: inline-block;
           padding: 0.2rem 0.8rem;
